--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body{
     font-family: 'Merriweather', serif;
     background-color: var(--primary-color);
     color: var(--sec-color);
+    
+}
+h1{
     text-shadow: 1px 3px var(--off-white)
 }
 .container{
@@ -21,6 +24,7 @@ input{
     width: 50%;
     padding: 0.3rem;
     margin: auto;
+    cursor: pointer;
 }
 button{
     background-color: var(--sec-color);
@@ -34,4 +38,18 @@ button{
 #output{
    color: var(--sec-color);
    text-shadow: 0px 0px;
+}
+.list-non-bullet{
+    list-style: none;
+}
+.list-item-inline{
+    display: inline;
+    padding: 0.3rem;
+}
+.link{
+    text-decoration: none;
+    cursor: pointer;
+    color: var(--sec-color);
+    cursor: pointer;
+    font-weight: bold;
 }
